Commit de Conexion a la BD

--- a/Prueba/appsettings.json
+++ b/Prueba/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConexionMysql": "server=localhost;port=3306;database=VueDB;user=root;password=antonio20019"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
