--- a/Prueba/Dockerfile
+++ b/Prueba/Dockerfile
@@ -1,22 +1,28 @@
-# Utiliza la imagen de SDK de .NET 6 para compilar y construir la aplicación
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
+# Usar la imagen base oficial de .NET SDK para construir el proyecto
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+
+# Establecer el directorio de trabajo
 WORKDIR /app
 
-# Establecer la variable de entorno para el modo de desarrollo
-ENV ASPNETCORE_ENVIRONMENT=Development
-
-# Copia csproj y restaura las dependencias
-COPY *.csproj ./
+# Copiar los archivos del proyecto y restaurar las dependencias
+COPY *.csproj .
 RUN dotnet restore
 
-# Copia los archivos del proyecto y construye la aplicación
-COPY . ./
+# Copiar el resto de los archivos del proyecto y construir el proyecto
+COPY . .
 RUN dotnet publish -c Release -o out
 
-# Genera la imagen final
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
-WORKDIR /app
-COPY --from=build-env /app/out .
+# Usar la imagen base oficial de .NET Runtime para ejecutar la aplicación
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 
-# Configura el comando para ejecutar la aplicación
-ENTRYPOINT ["dotnet", "SISPO-API.dll"]
+# Establecer el directorio de trabajo
+WORKDIR /app
+
+# Copiar los archivos construidos desde la fase anterior
+COPY --from=build /app/out .
+
+# Exponer el puerto que la aplicación utiliza
+EXPOSE 80
+
+# Comando para ejecutar la aplicación
+ENTRYPOINT ["dotnet", "Prueba.dll"]
